# tscribe

./: .gitignore  CLAUDE.md  README.md  SPEC.md  TODO.md  pyproject.toml
docs/: macos-system-audio.md
src/tscribe/: __init__.py  __main__.py  cli.py  config.py  constants.py  devices.py  paths.py  pipewire_devices.py  session.py  streaming.py  timeparse.py  transcriber.py  update_check.py  vad.py  whisper_manager.py
src/tscribe/recorder/: __init__.py  base.py  dual_recorder.py  mock_recorder.py  pipewire_recorder.py  sounddevice_recorder.py  wasapi_recorder.py
tests/: conftest.py  test_cli.py  test_config.py  test_devices.py  test_dual_recorder.py  test_integration.py  test_paths.py  test_pipewire_devices.py  test_pipewire_recorder.py  test_recorder.py  test_session.py  test_streaming.py  test_timeparse.py  test_transcriber.py  test_update_check.py  test_vad.py  test_wasapi_recorder.py  test_whisper_manager.py
