[project]
name = "tscribe"
version = "1.0.0"
description = "Cross-platform CLI tool for recording audio and transcribing with faster-whisper"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "faster-whisper>=1.2.1",
    "onnxruntime<=1.21.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "yt-dlp>=2024.0",
    "PyAudioWPatch>=0.2.12; sys_platform == 'win32'",
]

[project.scripts]
tscribe = "tscribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tscribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (requires model download)"]
addopts = "--tb=short"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]
